# hextor

./: .gitignore  .travis.yml  Doxyfile  autogen.sh  configure.ac  readme.md
data/: hextor.gresource.xml
data/icons/: Makefile.am  hextor-icon-64x64.xcf
data/man/: Makefile.am  hextor.1  hextor.1.in
data/misc/: Makefile.am  hextor.appdata.xml  hextor.appdata.xml.in  hextor.desktop  hextor.desktop.in  htm-mime.xml  htm.desktop.in
data/pkgconfig/: Makefile.am  hextor-plugin.pc  hextor-plugin.pc.in
debian/: changelog  control  copyright  hextor-common.docs  hextor-common.manpages  hextor.install  hextor.lintian-overrides  hextor.menu  plugins.txt  rules
osx/: Info.plist.in  gtkrc  hextor.bundle  launcher.sh  makebundle.sh
plugins/: Makefile.am
plugins/checksum/: Makefile.am  checksum.c  checksum.vcxproj
plugins/doat/: Makefile.am  doat.c  doat.vcxproj
plugins/exec/: exec.c  exec.vcxproj
plugins/fishlim/: Makefile.am  fishlim.def  fishlim.vcxproj  fishlim.vcxproj.filters  keystore.c  plugin_hextor.c  plugin_hextor.h
plugins/mpcinfo/: functions.c  mp3Info.c  mpcInfo.c  mpcinfo.def  mpcinfo.vcxproj  oggInfo.c  theme.c
plugins/otr/: Makefile.am  hextor-formats.c  hextor_otr.c  hextor_otr.h  makeformats.py  otr.h  otr_util.c
plugins/otrm/: Makefile.am  cmd_core.c  cmd_core.h  cmd_header.h  cmd_version.c  cmd_version.h  cmds.c  cmds.h  constants.h  otrm.c
plugins/otrm/cmds/: version.c
plugins/perl/: Makefile.am  generate_header  hextor.pm.h  perl.c  perl.def  perl.vcxproj
plugins/perl/lib/: Hextor.pm  Xchat.pm
plugins/perl/lib/Hextor/: Embed.pm
plugins/perl/lib/Hextor/List/: Network.pm
plugins/perl/lib/Hextor/List/Network/: AutoJoin.pm  Entry.pm
plugins/python/: Makefile.am  python.c  python2.vcxproj  python3.vcxproj
plugins/sysinfo/: Makefile.am  format.c  format.h  sysinfo-backend.h  sysinfo.c  sysinfo.h  sysinfo.vcxproj
plugins/sysinfo/osx/: backend.m
plugins/sysinfo/unix/: backend.c
plugins/sysinfo/win32/: backend.c
plugins/upd/: upd.c  upd.vcxproj
plugins/winamp/: winamp.c  winamp.vcxproj
po/: Makevars  POTFILES.in  af.po  am.po  ast.po  az.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  hi.po  hu.po  id.po  it.po  ja_JP.po  kn.po  ko.po  lt.po  lv.po  mk.po  ml.po  ms.po  nb.po  nl.po  no.po  pa.po  pl.po  pt.po  pt_BR.po  (+15 more)
src/: version-script
src/common/: Makefile.am  cfgfiles.c  cfgfiles.h  chanopt.c  chanopt.h  common.vcxproj  common.vcxproj.filters  ctcp.c  ctcp.h  dcc.c  dcc.h  fe.h  hextor-plugin.h  hextor.c  hextor.h  hextorc.h  history.c  history.h  ignore.c  ignore.h  inbound.c  inbound.h  inet.h  make-te.c  make-te.vcxproj  marshalers.list  modes.c  modes.h  network.c  network.h  notify.c  notify.h  outbound.c  outbound.h  plugin-identd.c  plugin-identd.h  plugin-timer.c  plugin-timer.h  plugin.c  plugin.h  (+19 more)
src/common/dbus/: Makefile.am  dbus-client.c  dbus-client.h  dbus-plugin.c  dbus-plugin.h  example-gdbus.py  example.c  example.py  org.hextor.service.service  org.hextor.service.service.in  remote-object.xml
src/fe-gtk/: Makefile.am  ascii.c  ascii.h  banlist.c  banlist.h  chanlist.c  chanlist.h  chanview-tabs.c  chanview-tree.c  chanview.c  chanview.h  custom-list.c  custom-list.h  dccgui.c  editlist.c  editlist.h  fe-gtk.c  fe-gtk.h  fe-gtk.vcxproj  fe-gtk.vcxproj.filters  fkeys.c  fkeys.h  gtkutil.c  gtkutil.h  hextor  hextor.rc.tt  ignoregui.c  joind.c  joind.h  maingui.c  maingui.h  menu.c  menu.h  notifygui.c  notifygui.h  palette.c  palette.h  pixmaps.c  pixmaps.h  plugin-notification.c  (+23 more)
src/fe-gtk/notifications/: notification-backend.h  notification-dummy.c  notification-libnotify.c  notification-osx.m  notification-windows.c  notification-winrt.cpp  notifications-winrt.vcxproj
src/fe-text/: Makefile.am  fe-text.c  fe-text.h  fe-text.vcxproj  hextor-text
src/htm/: Main.Designer.cs  Main.cs  Program.cs  README.md  htm.csproj
src/htm/Properties/: AssemblyInfo.cs
src/libenchant_win8/: libenchant_win8.vcxproj  win8_provider.cpp
win32/: config.h.tt  hextor.exe.manifest  hextor.props  hextor.sln  version-template.ps1
win32/copy/: changelog.url  copy.vcxproj  readme.url
win32/installer/: hextor.iss.tt  installer.vcxproj  installer.vcxproj.filters
win32/nls/: nls.vcxproj
win32/spelling/: build-spelling.bat  hextor-spelling.skel.iss
